app-demo/master-engine/virtualservice-app.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-app-engine
  namespace: mcs-demo
spec:
  hosts:
  - hello-app-engine.mcs-demo.global
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-app-engine.mcs-demo.global
        port:
          number: 80
      weight: 100
